--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,12 @@
 @font-face {
 	font-family: 'Roboto';
-	src:  url('/fonts/roboto_condensed_regular.ttf') format('opentype');
+	src:  url('/fonts/roboto_condensed_regular.ttf') format('truetype');
 	font-weight: normal;
 	font-style: normal;
 }
 @font-face {
 	font-family: 'Roboto';
-	src:  url('/fonts/roboto_condensed_bold.ttf') format('opentype');
+	src:  url('/fonts/roboto_condensed_bold.ttf') format('truetype');
 	font-weight: bold;
 	font-style: normal;
 }
